<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="7dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#E9D8A6"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="96dp"
                android:layout_height="91dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/profile_accessibility"
                android:cropToPadding="true"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notificationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/itim_regular"
                    android:text="@string/user_request"
                    android:textColor="#001219"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/acceptButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#001219"
                        android:fontFamily="@font/itim_regular"
                        android:text="@string/accept_request"
                        android:textColor="#E9D8A6"
                        android:textSize="16sp"
                        app:cornerRadius="50dp" />

                    <Button
                        android:id="@+id/declineButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="#001219"
                        android:fontFamily="@font/itim_regular"
                        android:text="@string/decline_request"
                        android:textColor="#E9D8A6"
                        android:textSize="16sp"
                        app:cornerRadius="50dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>

